spacing fixes continued

--- a/static/css/partials/_common.scss
+++ b/static/css/partials/_common.scss
@@ -166,7 +166,7 @@ hr.divide10 {
 
 .ad-container {
     text-align: center;
-    margin: 0px auto 40px auto;
+    margin: 0px auto 40px auto !important;
 
     width: $container-desktop;
 
